web-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: web-app.alontrubin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-web-app
            port:
              number: 80
